added css and js path

--- a/experiment/breadth-first-traversal/simulation/bft-exercise.html
+++ b/experiment/breadth-first-traversal/simulation/bft-exercise.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 <link rel="stylesheet" type="text/css" href="../css/hint_box.css"/>
- 
+<link rel="stylesheet" href="../../assets/css/common-styles.css">
 
 <body>
 <div class="instruction-box">
@@ -67,5 +67,5 @@ Select the correct sudo BFT by generating a graph. </p>
 <script src="js/globalvariables.js"></script>
 <script src="js/treeExercise.js"></script>
 <script src="js/traversals.js"></script>
-
+<script src="../../assets/js/instruction-box.js"></script>
 </body>
