--- a/experiment/depth-first-traversal/simulation/dft-practice.html
+++ b/experiment/depth-first-traversal/simulation/dft-practice.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
-
+<link rel="stylesheet" href="../../assets/css/common-styles.css">
 
 <body>    
 <div class="instruction-box">
@@ -63,5 +63,5 @@
 <script src="js/globalvariables.js"></script>
 <script src="js/traversals.js"></script>
 <script src="js/treePractice.js"></script>
-
+<script src="../../assets/js/instruction-box.js"></script>
 </body>
