--- a/experiment/depth-first-traversal/simulation/dft.html
+++ b/experiment/depth-first-traversal/simulation/dft.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
-
+<link rel="stylesheet" href="../../assets/css/common-styles.css">
 
 <div class="instruction-box">
   <button class="collapsible">Instructions</button>
@@ -61,5 +61,5 @@
 <script src="js/globalvariables.js"></script>
 <script src="js/traversals.js"></script>
 <script src="js/treeTraversal.js"></script>
-
+<script src="../../assets/js/instruction-box.js"></script>
 </body>
