--- a/experiment/breadth-first-traversal/simulation/bft.html
+++ b/experiment/breadth-first-traversal/simulation/bft.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Breadth First Traversals</title>
-<link rel="stylesheet" type="text/css" href="../css/commonstyle.css"/>
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-<link rel="stylesheet" type="text/css" href="../css/hint_box.css"/>
+<link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
 <link rel="stylesheet" href="../../assets/css/common-styles.css"> 
 
 <body>
