Fixed minor spelling and grammatical errors, in addition to rephrasing the bft practice instructions

--- a/experiment/breadth-first-traversal/simulation/bft-practice.html
+++ b/experiment/breadth-first-traversal/simulation/bft-practice.html
@@ -12,15 +12,13 @@
   <button class="collapsible">Instructions</button>
   <div class="content">
     <ul>
-      <li>Click <b>Generate Graph</b> to generate a random
-        graph.
-      <li>Select a traversal.</li>
+      <li>Perform a Breadth First Traversal.</li>
       <li>Click on the nodes in the correct sequence of
-        selected traversal.</li>
-      <li>Click <b>Reset</b> after completing each traversal,
-        before moving on to next traversal.</li>
-      <li>Click on text inside the circle to select the node
-        for traversal</li>
+        a Breadth First Traversal.</li>
+        <li>Click on the text inside a circle to select that node
+          for traversal.</li>
+      <li>Click <b>Reset</b> to restart the current traversal.</li>
+      <li>Click <b>New Graph</b> to generate a new graph.</li>
     </ul>
   </div>
 </div>
