Fixed quiz question and rewrote directions for simulation

--- a/experiment/breadth-first-traversal/simulation/bft-exercise.html
+++ b/experiment/breadth-first-traversal/simulation/bft-exercise.html
@@ -11,15 +11,13 @@
   <button class="collapsible">Instructions</button>
   <div class="content">
     <ul>
-       <li>Click <b>Generate Graph</b> to generate a random
-       graph.
-       <li>Select a traversal.</li>
-       <li>Click on the nodes in the correct sequence of
-       selected traversal.</li>
-       <li>Click <b>Reset</b> after completing each
-       traversal, before moving on to next traversal.</li>
-       <li>Click on text inside the circle to select the
-       node for traversal</li>
+      <li>Perform a Sudo BFT (see question below).</li>
+      <li>Click on the nodes in the correct sequence of
+        a Sudo BFT traversal.</li>
+        <li>Click on the text inside a circle to select that node
+          for traversal.</li>
+      <li>Click <b>Reset</b> to restart the current traversal.</li>
+      <li>Click <b>New Graph</b> to generate a new graph.</li>
     </ul>
   </div>
 </div>
@@ -32,9 +30,9 @@
      </div>
 
 <p id="que">
-<b>Question:</b>Suppose a new kind of BFT traversal such that 
+<b>Question:</b> Suppose there is a new kind of BFT traversal such that 
 the traversal at the particular height is from right to left instead of left to right and this new BFT traversal is called Sudo BFT.
-Select the correct sudo BFT by generating a graph. </p>
+Perform a proper Sudo BFT traversal on the given graph. </p>
 
 
     <div id="button-wrapper" class="buttons" style="top: 48vw; !important;">
