--- a/experiment/depth-first-traversal/simulation/dft-exercise.html
+++ b/experiment/depth-first-traversal/simulation/dft-exercise.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Breadth First Traversals</title>
+<title>Depth First Traversal Exercise</title>
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
 <link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
+
+
 
 <body>
 <div class="instruction-box">
@@ -18,6 +20,7 @@
       traversal, before moving on to next traversal.</li>
       <li>Click <b>Submit</b> after completing each
       traversal to check</li>
+      <li>Click <b>Undo</b> to undo the <b>node you just clicked </b></li>
     </ul>
   </div>
 </div>
@@ -38,6 +41,7 @@
   <button id="reset" type="button" value="Reset" class="green button_input"  onclick="reset()">Reset</button>
   <button id="generategraph" type="button" value="Generate Graph" class="green button_input"  onclick="generateG()">New Graph</button>
   <button id="submit" type="button" value="submit" class="green button_input"  onclick="submit()">Submit</button>
+   <button id="undo" type="button" value="undo" class="green button_input"  onclick="undo()">Undo</button>
 </div>
 
     <div id="tree"></div>
@@ -60,6 +64,7 @@
     
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+
 <script src="js/data.js"></script>
 <script src="js/globalvariables.js"></script>
 <script src="js/traversals.js"></script>
