--- a/experiment/breadth-first-traversal/simulation/bft-exercise.html
+++ b/experiment/breadth-first-traversal/simulation/bft-exercise.html
@@ -11,9 +11,9 @@
   <button class="collapsible">Instructions</button>
   <div class="content">
     <ul>
-      <li>Perform a Sudo BFT (see question below).</li>
+      <li>Perform a pseudo BFT (see question below).</li>
       <li>Click on the nodes in the correct sequence of
-        a Sudo BFT traversal.</li>
+        a Pseuudo BFT traversal.</li>
         <li>Click on the text inside a circle to select that node
           for traversal.</li>
       <li>Click <b>Reset</b> to restart the current traversal.</li>
@@ -31,8 +31,8 @@
 
 <p id="que">
 <b>Question:</b> Suppose there is a new kind of BFT traversal such that 
-the traversal at the particular height is from right to left instead of left to right and this new BFT traversal is called Sudo BFT.
-Perform a proper Sudo BFT traversal on the given graph. </p>
+the traversal at the particular height is from right to left instead of left to right and this new BFT traversal is called pseudo BFT.
+Perform a proper pseudo BFT traversal on the given graph. </p>
 
 
     <div id="button-wrapper" class="buttons" style="top: 48vw; !important;">
@@ -57,7 +57,7 @@ Perform a proper Sudo BFT traversal on the given graph. </p>
 </div> 
 
 <button id="generate" type="button" value="Generate Graph" class="green" onclick="generateGraph() " style="visibility: hidden">Generate</button>
-<button id="bft" type="button" value ="Breadth First" class="green" onclick="bft()" style="visibility: hidden">Sudo BFT</button>
+<button id="bft" type="button" value ="Breadth First" class="green" onclick="bft()" style="visibility: hidden">pseudo BFT</button>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
