--- a/experiment/depth-first-traversal/simulation/dft-exercise.html
+++ b/experiment/depth-first-traversal/simulation/dft-exercise.html
@@ -20,7 +20,7 @@
       traversal, before moving on to next traversal.</li>
       <li>Click <b>Submit</b> after completing each
       traversal to check</li>
-      <li>Click <b>Undo</b> to undo the <b>node you just clicked </b></li>
+      <li>Click <b>Undo</b> to undo your <b>last action </b> - undoing your click of a node will be as if you never clicked it</li>
     </ul>
   </div>
 </div>
