--- a/experiment/breadth-first-traversal/simulation/bft-exercise.html
+++ b/experiment/breadth-first-traversal/simulation/bft-exercise.html
@@ -66,9 +66,6 @@ Select the correct sudo BFT by generating a graph. </p>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script src="js/data.js"></script>
-<script src="js/globalvariables.js"></script>
-<script src="js/treeExercise.js"></script>
-<script src="js/traversals.js"></script>
+<script type = "module" src="js/treeExercise.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
