--- a/experiment/breadth-first-traversal/simulation/bft-practice.html
+++ b/experiment/breadth-first-traversal/simulation/bft-practice.html
@@ -50,9 +50,6 @@
 <button id="bft" type="button" value="Breadth First" class="green" onclick="bft()" style="visibility: hidden">Breadth First</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script src="js/data.js"></script>
-<script src="js/globalvariables.js"></script>
-<script src="js/traversals.js"></script>
-<script src="js/treePractice.js"></script>
+<script type = "module" src="js/treePractice.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
