--- a/experiment/depth-first-traversal/simulation/dft-practice.html
+++ b/experiment/depth-first-traversal/simulation/dft-practice.html
@@ -59,9 +59,6 @@
         
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script src="js/data.js"></script>
-<script src="js/globalvariables.js"></script>
-<script src="js/traversals.js"></script>
-<script src="js/treePractice.js"></script>
+<script type = "module" src="js/treePractice.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
