--- a/experiment/depth-first-traversal/simulation/dft.html
+++ b/experiment/depth-first-traversal/simulation/dft.html
@@ -57,9 +57,6 @@
 <button id="preorder" type="button" value="Preorder" class="green"  onclick="preorder()"style="visibility: hidden;">Preorder</button>
    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script src="js/data.js"></script>
-<script src="js/globalvariables.js"></script>
-<script src="js/traversals.js"></script>
-<script src="js/treeTraversal.js"></script>
+<script type = "module" src="js/main-demo.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
