Completely modularized and fixed some bugs

--- a/experiment/breadth-first-traversal/simulation/bft-practice.html
+++ b/experiment/breadth-first-traversal/simulation/bft-practice.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
-<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css"> 
+<link rel="stylesheet" href="assets/css/common-styles-responsive.css"> 
 
 
 <body>
@@ -50,6 +50,6 @@
 <button id="bft" type="button" value="Breadth First" class="green" onclick="bft()" style="visibility: hidden">Breadth First</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script type = "module" src="js/treePractice.js"></script>
+<script type = "module" src="../../Commonfunctions/commonfunctions-practice.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
