--- a/experiment/breadth-first-traversal/simulation/bft-exercise.html
+++ b/experiment/breadth-first-traversal/simulation/bft-exercise.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
-<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
+<link rel="stylesheet" href="assets/css/common-styles-responsive.css">
 
 <body>
 <div class="instruction-box">
@@ -58,14 +58,16 @@ Select the correct sudo BFT by generating a graph. </p>
   </div>
 </div> 
 
-<b>Node Sequence:</b>
-<div id="traversal"></div>
+<div class="traversal-box" id="traversalbox" style="margin:auto;margin-top:32%;height:14vh;left:20%;">
+  <b>Node Sequence:</b>
+  <div id = "traversal"></div>
+  </div>
 
 <button id="generate" type="button" value="Generate Graph" class="green" onclick="generateGraph() " style="visibility: hidden">Generate</button>
 <button id="bft" type="button" value ="Breadth First" class="green" onclick="bft()" style="visibility: hidden">Sudo BFT</button>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script type = "module" src="js/treeExercise.js"></script>
+<script type = "module" src="../../Commonfunctions/commonfunctions-exercise.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
