--- a/experiment/depth-first-traversal/simulation/dft-exercise.html
+++ b/experiment/depth-first-traversal/simulation/dft-exercise.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/commonstyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/hint_box.css"/>
-<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
+<link rel="stylesheet" href="assets/css/common-styles-responsive.css">
 
 
 
@@ -56,16 +56,20 @@
   </div>
 </div> 
 
-<b>Node Sequence:</b>
-      <div id="traversal"></div>
+<div class="traversal-box" id="traversalbox" style="margin:auto;margin-top:32%;height:14vh;left:20%;">
+  <b>Node Sequence:</b>
+  <div id = "traversal"></div>
+  </div>
+
 
 <button id="postorder" type="button"  value="Postorder" class="green button_input"  onclick="postorder()">Postorder</button>
 <button id="generate" type="button" value="Generate Graph" class="green button_input"  onclick="generateGraph()" style="visibility: hidden">Generate Graph</button>
 <button id="preorder" type="button" value="Preorder" class="green button_input"  onclick="preorder()" style="visibility: hidden">Exorder</button>
 <button id="inorder" type="button" value="Inorder" class="green button_input"  onclick="inorder()">Inorder</button>
-    
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script type = "module" src="js/treeExercise.js"></script>
+<script type = "module" src="../../Commonfunctions/commonfunctions-exercise.js"></script>
 <script src="../../assets/js/instruction-box.js"></script>
 </body>
